--- a/src/front/styles/SignIn.css
+++ b/src/front/styles/SignIn.css
@@ -45,6 +45,7 @@ button[type="submit"] {
   border-radius: 20px;
   margin: 0px 0px 38px;
   text-align: center;
+  width: 30%;  
   font-family: 'Roboto', sans-serif; 
 }
 
