parece que todo va bien....

--- a/src/front/styles/Movie.css
+++ b/src/front/styles/Movie.css
@@ -10,9 +10,10 @@
   color: rgb(236, 206, 51);
 }
 
-.movie_favorites{
-  font-family: 'Roboto', sans-serif; 
-  color: rgb(236, 206, 51);
+.movie-title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .ranking {
