--- a/src/front/styles/SignIn.css
+++ b/src/front/styles/SignIn.css
@@ -47,6 +47,7 @@ button[type="submit"] {
   text-align: center;
   width: 30%;  
   font-family: 'Roboto', sans-serif; 
+  padding-right: 20px;
 }
 
 #mo{
